--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_MenuPartial.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_MenuPartial.cshtml
@@ -216,13 +216,13 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link pl-4" asp-controller="MarcaEquipamento" asp-action="Index">
-                            <i class="nav-icon fas fa-temperature-low"></i>
+                            <i class="nav-icon fas fa-snowflake	"></i>
                             <p>Marca de Equipamento</p>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link pl-4" asp-controller="ModeloEquipamento" asp-action="Index">
-                            <i class="nav-icon fas fa-temperature-low"></i>
+                            <i class="nav-icon fas fa-snowflake	"></i>
                             <p>Modelo de Equipamento</p>
                         </a>
                     </li>
