--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/ModeloEquipamento/Index.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/ModeloEquipamento/Index.cshtml
@@ -26,7 +26,7 @@
                             <thead>
                                 <tr>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.FirstOrDefault()?.MarcaNome ?? "Marca")
+                                        @Html.DisplayNameFor(model => model.FirstOrDefault().Marcas[0].Nome)
                                     </th>
                                     <th>
                                         @Html.DisplayNameFor(model => model.FirstOrDefault().ModeloEquipamento.Nome)
